Alignment fixed

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -50,18 +50,15 @@ a,
   background-color: #4f1fbb;
 }
 
-.dropdown-local-1{
+/* .dropdown-local-1{
   background-color: #4f1fbb;
   padding:15px 0px;
-}
+} */
 
 .cover-card{
-  position: relative;
-  left: -5vw;
+  border-radius: 16px;
   background-color: #fff;
-  padding: 3px 50px;
   margin-top: 16px;
-  width: 95vw;
   box-shadow: 3px 3px 10px -8px black;
 }
 
@@ -162,10 +159,6 @@ footer {
     left: -3vw;
   }
 
-  .cover{
-    margin: 0 100px;
-  }
-
   video{
     margin-bottom: 60px;
   }
@@ -202,7 +195,6 @@ footer {
   color: #fff;
   border-radius: 16px;
   min-width: 100%;
-  margin: 20px -30px;
 }
 
 .text{
@@ -263,6 +255,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+  border-radius: 8px;
   box-shadow: 2px 2px 10px -7px black!important;
 }
 
